# pyunity-gui

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  LICENSE  README.md  builder.py  cli.py  contributing.md  cube.py  default.py  drag.ui  filetracker.py  install.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  splash.py
.github/: dependabot.yml
.github/workflows/: build.yml  wheel.yml
Test/: Scene.pyunity  Test.pyunity  __init__.py
Test/Materials/: Side.mat
Test/Meshes/: Side.mesh
Test/Scenes/: Main Scene.scene  Scene.scene
Test/Scripts/: Oscillator.py  Oscillator2.py  Rotator.py
docs/: README.md
editor/: __init__.py  __main__.py  app.py  cli.py  core.py  editor.ui  files.py  inspector.py  render.py  resources.py  smoothScroll.py  splash.py  views.py  window.py
editor/theme/: dark.qss  light.qss
pyunity_editor/: __init__.py  app.py  cli.py  editor.ui  files.py  inspector.py  local.py  render.py  resources.qrc  smoothScroll.py  splash.py  views.py  window.py
pyunity_editor/theme/: dark.qss  light.qss
standalone/: 7z.sfx  create.py  icons.rc  pyunity-editor.c  pyunity_updater.py  version.rc
