[build-system]
requires = [
    "wheel>=0.29.0",
    "setuptools>=58.6.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyunity-editor"
version = "0.1.1"
authors = [{name = "The PyUnity Team", email = "tankimarshal2@gmail.com"}]
description = "An Editor for PyUnity in the style of the UnityEditor"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3"
dependencies = [
    "pyunity>=0.9.0",
    "pyside6-essentials>=6.5.2",
    "pillow",
    "importlib_metadata; python_version < '3.8'",
    "PySideSix-Frameless-Window",
]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.urls]
Homepage = "https://docs.pyunity.x10.bz/"
Documentation = "https://docs.pyunity.x10.bz/"
Source = "https://github.com/pyunity/pyunity-gui"
Tracker = "https://github.com/pyunity/pyunity-gui/issues"

[tool.setuptools]
include-package-data = false
