[metadata]
name = pyunity-editor
version = 0.1.1
author = The PyUnity Team
author_email = tankimarshal2@gmail.com
description = An Editor for PyUnity in the style of the UnityEditor
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
url = https://docs.pyunity.x10.bz/
project_urls =
    Documentation = https://docs.pyunity.x10.bz/
    Source = https://github.com/pyunity/pyunity-gui
    Tracker = https://github.com/pyunity/pyunity-gui/issues
classifiers =
    Development Status :: 3 - Alpha
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
python_requires = >=3
install_requires =
    pyunity==0.9.0
    pyside6
    pillow
    importlib_metadata; python_version < '3.8'
